Fix right padding in widget blocks when content is overflowing

--- a/css/_base.scss
+++ b/css/_base.scss
@@ -4,6 +4,10 @@ html {
   font-family: 'Roboto', sans-serif;
 }
 
+body {
+  background-color: #fafafa;
+}
+
 ul {
   margin: 0;
   padding: 0;
