--- a/css/_product.scss
+++ b/css/_product.scss
@@ -40,6 +40,7 @@
   &__tabs {
     width: 100%;
     flex-shrink: 0;
+    margin: 20px 0;
   }
 
 
